[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/Rubik-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/themes/buttons-green.tres" type="Theme" id=2]
[ext_resource path="res://assets/themes/buttons-red.tres" type="Theme" id=3]
[ext_resource path="res://scenes/Pause/Pause.gd" type="Script" id=4]
[ext_resource path="res://assets/images/icons/buttons/key.enter.svg" type="Texture" id=5]
[ext_resource path="res://assets/images/icons/buttons/key.move.svg" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="PausedMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.572549 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.4
anchor_right = 0.6
anchor_bottom = 1.0
margin_left = -367.5
margin_right = 367.5
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1544.0
margin_bottom = 950.0
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1494.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 2 )
text = "GAME_PAUSED_TEXT"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 268.0
margin_right = 1494.0
margin_bottom = 532.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 25
custom_constants/margin_bottom = 25

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 25.0
margin_right = 1494.0
margin_bottom = 239.0
focus_neighbour_top = NodePath("../../MarginContainer2/Exit")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "GAME_RESUME_BUTTON"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 536.0
margin_right = 1494.0
margin_bottom = 801.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 25
custom_constants/margin_bottom = 50

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2"]
margin_top = 25.0
margin_right = 1494.0
margin_bottom = 215.0
focus_neighbour_bottom = NodePath("../../MarginContainer/Resume")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "GAME_EXIT_BUTTON"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 805.0
margin_right = 1494.0
margin_bottom = 900.0
size_flags_horizontal = 3
custom_constants/margin_top = 25
custom_constants/margin_bottom = 10

[node name="Controls" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer3"]
margin_top = 25.0
margin_right = 1494.0
margin_bottom = 85.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer3/Controls"]
margin_right = 798.0
margin_bottom = 60.0
custom_constants/margin_right = 35
custom_constants/margin_left = 35

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer3/Controls/MarginContainer"]
margin_left = 35.0
margin_right = 763.0
margin_bottom = 60.0

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer3/Controls/MarginContainer/HBoxContainer"]
margin_right = 212.0
margin_bottom = 60.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer3/Controls/MarginContainer/HBoxContainer"]
margin_left = 216.0
margin_top = 2.0
margin_right = 728.0
margin_bottom = 57.0
theme = SubResource( 4 )
text = "MOVE_BUTTON_WORD"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer3/Controls"]
margin_left = 802.0
margin_right = 1494.0
margin_bottom = 60.0
custom_constants/margin_right = 35
custom_constants/margin_left = 35

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer3/Controls/MarginContainer2"]
margin_left = 35.0
margin_right = 657.0
margin_bottom = 60.0

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer3/Controls/MarginContainer2/HBoxContainer"]
margin_right = 60.0
margin_bottom = 60.0
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer3/Controls/MarginContainer2/HBoxContainer"]
margin_left = 64.0
margin_top = 2.0
margin_right = 622.0
margin_bottom = 57.0
theme = SubResource( 4 )
text = "SELECT_BUTTON_WORD"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/Exit" to="." method="_on_Exit_pressed"]
